--- a/style.css
+++ b/style.css
@@ -100,4 +100,12 @@ body {
     .form-options-wrapper {
       display: block; } }
 
+
+
+.info{
+	color: white;
+}
+
+
+
 /*# sourceMappingURL=login.css.map */
